# OOP_CPP_Laboratory_3

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: Figure.h  FigureArray.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: FigureArray.cpp  Octagon.cpp  Square.cpp  Triangle.cpp
test/: test_array.cpp  test_octagon.cpp  test_square.cpp  test_triangle.cpp
